<resources>
    <string name="app_name">아리미</string>
    <string name="main_time_table_title">오늘의 시간표</string>
    <string name="main_lunch_title">급식 메뉴</string>
    <string name="search_title">어떤 학교를 다니고 있나요?</string>
    <string name="search_help">학급 시간표와 급식 메뉴를 조회하기 위해 필요해요!\n학교 이름을 입력하고, 검색 결과가 표시되면, 선택해주세요!</string>
    <string name="search_hint">학교명을 입력하세요</string>
    <string name="select_title">학년과 반을 선택해주세요!</string>
    <string name="select_help">학급 시간표를 조회하기 위해 필요해요!\n선택 후, 다음으로 버튼을 눌러주세요:)</string>
    <string name="select_next_btn">다음으로</string>
    <string name="set_time_title">시간 정보를 입력해주세요!</string>
    <string name="set_time_help">시간표 정보를 정확히 보여주기 위해 필요해요!\n입력 후, 완료하기 버튼을 눌러주세요:)</string>
    <string name="set_time_q1">수업 시간은 몇분인가요?</string>
    <string name="set_time_a1_hint">40</string>
    <string name="set_time_a1_sub_hint">분</string>
    <string name="set_time_q2">쉬는 시간은 몇분인가요?</string>
    <string name="set_time_q3">1교시는 언제 시작하나요?</string>
    <string name="q4">점심 시간은 언제인가요?</string>
    <string name="set_time_a2_hint">10</string>
    <string name="set_time_a3_1_hint">8</string>
    <string name="set_time_a3_2_hint">40</string>
    <string name="set_time_a4_hint">4</string>
    <string name="set_time_a5_1_hint">13</string>
    <string name="set_time_a5_2_hint">00</string>
    <string name="set_time_a2_sub_hint">분</string>
    <string name="set_time_a3_1_sub_hint">시</string>
    <string name="set_time_a3_2_sub_hint">분</string>
    <string name="set_time_a4_sub_hint">교시 후</string>
    <string name="set_time_a5_1_sub_hint">시</string>
    <string name="set_time_a5_2_sub_hint">분</string>
    <string name="set_time_btn_finish">완료하기</string>
    <string name="splash_copyright">서울여중 도덕반교실\nby Michael-kay Park\nCC BY-ND 라이선스</string>
    <string name="description_splash_image">스플래시 이미지</string>
    <string name="description_splash_logo">로고 이미지</string>
    <string name="welcome_sub_title">급식과 시간표를 빠르게!</string>
    <string name="welcome_title">아리미에 오신 것을 환영합니다☺️</string>
    <string name="welcome_content_text">SSF 나눔축제 선린인터넷고등학교 EDCAN\n나만의 급식 &amp; 시간표 앱 만들기 클래스에서 제작한 어플리케이션입니다:)\n\n본 어플리케이션은 급식과 시간표를 PUSH 알림으로 알려주고, 어플리케이션에서 바로 조회할 수 있는 기능을 제공합니다.</string>
    <string name="welcome_btn_start">시작하기</string>

</resources>